--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,7 +26,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/colyseus/colyseus.git"
+    "url": "git://github.com/mirabo-tech/colyseus.git"
   },
   "homepage": "https://colyseus.io/",
   "engines": {
