--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mirabo-tech/colyseus_core",
-  "version": "0.14.28",
+  "name": "@mirabo-colyseus/core",
+  "version": "0.14.29",
   "description": "Fork of Multiplayer Framework for Node.js.",
   "input": "./src/index.ts",
   "main": "./build/index.js",
@@ -33,8 +33,8 @@
     "node": ">= 14.x"
   },
   "dependencies": {
-    "@colyseus/schema": "^1.0.15",
     "@gamestdio/timer": "^1.3.0",
+    "@mirabo-colyseus/schema": "^1.0.15",
     "@types/redis": "^2.8.12",
     "debug": "^4.0.1",
     "internal-ip": "^4.3.0",
